--- a/Website Layout For Copying/style.css
+++ b/Website Layout For Copying/style.css
@@ -38,13 +38,14 @@ body{
 .main{
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     padding-left: 55px;
-    height: 100%;
+    padding-bottom: 2.5rem;
 }
 /*Style the footer*/
-p.author{
+#footer{
   position: absolute;
-  bottom:0;
+  bottom: 0;
   width: 100%;
   color: black;
   line-height: 40px;
