increase button size

--- a/Updated Website Layout For Copying/style.css
+++ b/Updated Website Layout For Copying/style.css
@@ -196,7 +196,7 @@ body{
   }
 /*Increase the text size of the Assignment 2 Buttons*/
 .buttonColorSwitcher{
-    font-size: 20px;
+    font-size: xx-large;
   }
 /*Change the text color of the Assignment 2 Buttons*/
 #buttonFA{
