tried to fix the button sizing for this module but could not

--- a/Assignment 2/Solution/style.css
+++ b/Assignment 2/Solution/style.css
@@ -54,10 +54,7 @@
   .rightSidebox-2{
     flex:1;
     order:3;
-  }
-  
-  
-  
+  }  
   
   
     @media(min-width:468px){
@@ -89,7 +86,7 @@
   }
   
 .buttonColorSwitcher{
-    font-size: xx-large;
+    font-size: 16px;
   }
   
 #buttonFA{
