--- a/Updated Website Layout For Copying/style.css
+++ b/Updated Website Layout For Copying/style.css
@@ -87,7 +87,7 @@ body{
   padding-right: 10px;
   padding-bottom: 0px;
   padding-left: 10px;
-  color:#ffa4a2;
+  color: black;
   background-color:#f4f4f4;
 }
 /*Empty space for the right side*/
